<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laboratorio Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Alerta">Button Clicked</string>
    <string name="title_activity_agregar">Agregar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnConsultar">Consultar</string>
    <string name="btnAgregar">Agregar</string>
    <string name="titAgregar">Agregar nuevo platillo</string>
    <string name="titPlatillo">Nombre platillo</string>
    <string name="titDescripcion">Descripcion</string>
    <string name="titPais">Pais</string>
    <string name="titSubirImagen">Subir Foto</string>
    <string name="btnSubirImagen">Imagen</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_agregar_platillo">AgregarPlatillo</string>
    <string name="title_activity_consultar">Consultar</string>
    <string name="btnLoginFacebook">Login Facebook</string>
    <string name="app_id">393535750799943</string>
    <string name="btnLoginTwitter">Login Twitter</string>
    <string name="lblBienvenido">Bienvenido </string>
    <string name="lblUsuario">Usuario</string>


    <color name="backgroundBuscar">#ff5facff</color>
    <color name="backgroundBlanco">#ffffffff</color>
    <color name="ColorTitulo">#ffffb020</color>

</resources>
